force-app/main/default/objects/Section__c/fields/Annexure__c.field-meta.xml
<CustomField>
    <fullName>Annexure__c</fullName>
    <label>Annexure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Details</fullName>
            </value>
            <value>
                <fullName>Product Benefits</fullName>
            </value>
            <value>
                <fullName>Extended Warranty Plan</fullName>
            </value>
            <value>
                <fullName>Optional Safety Accessories</fullName>
            </value>
            <value>
                <fullName>Price Matrix &amp; Commercial Terms</fullName>
            </value>
            <value>
                <fullName>General Terms and Conditions for Sale of Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>