force-app/main/default/objects/Section__c/fields/Content_Line_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Content_Line_Spacing__c</fullName>
    <label>Content Line Spacing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>