force-app/main/default/objects/Section__c/fields/Product_Specification_Row_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Product_Specification_Row_Spacing__c</fullName>
    <label>Product Specification Row Spacing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>