force-app/main/default/objects/Section__c/fields/QRCode_Image_Name__c.field-meta.xml
<CustomField>
    <fullName>QRCode_Image_Name__c</fullName>
    <label>QRCode Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>