force-app/main/default/objects/Section__c/fields/Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Template</label>
    <referenceTo>Quote_Template__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>