force-app/main/default/objects/Section__c/fields/QuoteLineItem_Filter__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem_Filter__c</fullName>
    <label>QuoteLineItem Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>