force-app/main/default/objects/Section__c/fields/Section_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Section_Alignment__c</fullName>
    <label>Section Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>left</fullName>
            </value>
            <value>
                <fullName>center</fullName>
            </value>
            <value>
                <fullName>rignt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>