force-app/main/default/objects/Section__c/fields/Section_Related_Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Section_Related_Base_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Related Base Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>