force-app/main/default/objects/Section__c/fields/Show_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Header</label>
    <type>Checkbox</type>
</CustomField>