force-app/main/default/objects/Section__c/fields/Sort_By_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Sort_By_Parameter__c</fullName>
    <label>Sort By Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>