force-app/main/default/objects/Section__c/fields/Table_Object__c.field-meta.xml
<CustomField>
    <fullName>Table_Object__c</fullName>
    <label>Table Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>