force-app/main/default/objects/Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Content_Line_Spacing__c</columns>
    <columns>Type__c</columns>
    <columns>Table_Object__c</columns>
    <columns>Section_Alignment__c</columns>
    <columns>Section_Related_Base_Product__c</columns>
    <columns>Quote_Template__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Annexure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>